--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,10 +13,11 @@
     "@ant-design/icons": "^5.4.0",
     "@react-oauth/google": "^0.12.1",
     "ant-design": "^1.0.0",
-    "antd": "^5.20.0",
+    "antd": "^5.20.1",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.3.21",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
