--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@heroicons/react": "^2.1.5",
     "@react-oauth/google": "^0.12.1",
     "ant-design": "^1.0.0",
     "antd": "^5.20.1",
