--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.4.0",
     "@heroicons/react": "^2.1.5",
     "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "ant-design": "^1.0.0",
     "antd": "^5.20.1",
     "axios": "^1.7.3",
@@ -20,12 +21,14 @@
     "framer-motion": "^11.3.21",
     "heroicons": "^2.1.5",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.438.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
     "react-modal": "^3.16.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5"
