--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@heroicons/react": "^2.1.5",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.7",
     "ant-design": "^1.0.0",
-    "antd": "^5.20.1",
+    "antd": "^5.20.5",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.3.21",
