--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -31,8 +31,10 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
+    "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
