--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -34,7 +34,8 @@
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
