--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.20.5",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "crypto-browserify": "^3.12.0",
     "framer-motion": "^11.3.21",
     "heroicons": "^2.1.5",
     "js-cookie": "^3.0.5",
