--- a/package.json
+++ b/package.json
@@ -2,15 +2,25 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^2.0.0",
+    "busboy": "^1.6.0",
+    "cloudinary": "^2.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "google-auth-library": "^9.13.0",
+    "express": "^4.20.0",
+    "express-fileupload": "^1.5.1",
+    "google-auth-library": "^9.14.2",
+    "googleapis": "^144.0.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.2",
-    "nodemailer": "^6.9.14",
-    "nodemon": "^3.1.4"
+    "mongoose": "^8.6.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
+    "nodemon": "^3.1.4",
+    "razorpay": "^2.9.4",
+    "socket.io": "^4.8.0",
+    "streamifier": "^0.1.1"
   }
 }
