--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.1",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@heroicons/react": "^2.1.5",
+    "@jitsi/react-sdk": "^1.4.0",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.7",
     "ant-design": "^1.0.0",
@@ -20,9 +21,11 @@
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "crypto-browserify": "^3.12.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.3.21",
     "heroicons": "^2.1.5",
     "js-cookie": "^3.0.5",
+    "lib-jitsi-meet": "^1.0.6",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.438.0",
     "moment": "^2.30.1",
