--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.20.5",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.6",
     "crypto-browserify": "^3.12.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.3.21",
@@ -31,6 +32,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
